WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185478
AX: Hidden nodes which are not directly referenced should not participate name/description from content
https://bugs.webkit.org/show_bug.cgi?id=185478
Summary
AX: Hidden nodes which are not directly referenced should not participate nam...
Joanmarie Diggs
Reported
2018-05-09 09:45:59 PDT
The Accname specification states that if the current node is hidden (as defined by that spec), and not directly referenced by aria-labelledby or aria-describedby, and is not a host language text alternative, the empty string should be returned. We're seeing bugs where the text under the element is being included for certain "hidden" nodes. For instance in the test case found here,
https://github.com/w3c/web-platform-tests/blob/master/accname/description_from_content_of_describedby_element-manual.html
, the "in" from the table is being included.
Attachments
Patch
(6.96 KB, patch)
2018-05-09 09:50 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-05-09 09:46:11 PDT
<
rdar://problem/40094706
>
Joanmarie Diggs
Comment 2
2018-05-09 09:50:01 PDT
Created
attachment 339972
[details]
Patch
WebKit Commit Bot
Comment 3
2018-05-09 17:06:55 PDT
Comment on
attachment 339972
[details]
Patch Clearing flags on attachment: 339972 Committed
r231620
: <
https://trac.webkit.org/changeset/231620
>
WebKit Commit Bot
Comment 4
2018-05-09 17:06:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug